fix: layout shift when select is open

--- a/apps/proem/app/globals.css
+++ b/apps/proem/app/globals.css
@@ -22,6 +22,7 @@ h3 {
 .max-w-screen-md {
   max-width: 550px;
 }
+body { @apply !min-w-full; }
 
 @layer base {
   :root {
